fixed numerous color contrast issues

--- a/source/sass/_blogpage.scss
+++ b/source/sass/_blogpage.scss
@@ -122,6 +122,7 @@
             list-style-position: inside;
             li + li {
                 margin-top: .5rem;
+                color: $copy-color;
             }
         }
 
@@ -169,6 +170,7 @@
             // font-size: 1.15rem;
             opacity: .8;
             margin-bottom: 1rem;
+            color: $copy-color;
         }
 
         img {
