--- a/source/sass/_footer.scss
+++ b/source/sass/_footer.scss
@@ -2,8 +2,8 @@
     width: 100%;
     margin-top: 3rem;
     border-top: 1px solid rgba(0, 0, 0, 0.05);
-    font-size: 0.8rem;
-    color: #5a5a5a;
+    font-size: 0.9rem;
+    color: $copy-color;
     line-height: 1.3rem;
 }
 
