--- a/source/sass/_navigator.scss
+++ b/source/sass/_navigator.scss
@@ -9,7 +9,7 @@
         border: 1px solid #ddd;
         border-radius: 34px;
         &--enabled {
-            color: #888;
+            color: $color-copy;
             text-decoration: none;
             padding: .5rem 1.5rem;
             border: 1px solid #888;
