--- a/source/sass/_reset.scss
+++ b/source/sass/_reset.scss
@@ -24,6 +24,7 @@ h6 {
     margin: 0 0 $normal-font-size 0;
     white-space: normal;
     line-height: 110%;
+    color: $darkest-text-color;
 }
 
 h1 {
