--- a/source/sass/_variables.scss
+++ b/source/sass/_variables.scss
@@ -24,3 +24,5 @@ $docpageheadercolor: darkgreen;
 $highlightcolor: peru;
 $normalcolor: rgba(black, 0.8);
 $linkcolor: $docpageheadercolor;
+$copy-color: rgba(black, 0.8);
+
